HP871X/HP871X/hp871x.h



ViStatus _VI_FUNC hp871x_dirInfo(
	ViSession vi,
		ViString info_name,
		ViPString info,
		ViString drive);


ViStatus _VI_FUNC hp871x_clock(
	ViSession vi,
		ViString request,
		ViString clock_data,
		ViPString cur_clock);


ViStatus _VI_FUNC hp871x_progControl( 
        ViSession vi, 
		ViString request,
		ViString command,
		ViPString prog_status);


ViStatus _VI_FUNC hp871x_progVariable( 
        ViSession vi, 
		ViString name,
		ViString str_data,
		ViPString cur_str,
		ViReal64 number_data,
		ViPReal64 cur_number);


ViStatus _VI_FUNC hp871x_progLoad( 
	ViSession vi, 
		ViString progfile);


ViStatus _VI_FUNC hp871x_doCal( 
	ViSession vi, 
		ViString request,
		ViPInt32 abortcal,
		ViInt32 channel,
		ViString prompt);


ViStatus _VI_FUNC hp871x_readID( 
        ViSession vi, 
		ViPString cur_ID,
		ViString request,
		ViPReal64 ID_status);


ViStatus _VI_FUNC hp871x_saveDefine( 
        ViSession vi,
		ViString request,
		ViString define,
		ViPInt32 define_status);


ViStatus _VI_FUNC hp871x_stringParse(
		   ViSession vi,
		   ViChar _VI_FAR in_out[],
		   ViPString parsed,
           ViPInt32 not_done,
		   ViString delimiter);


ViStatus _VI_FUNC hp871x_sweepStep( 
        ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPInt32 step_status);