HP871X/HP871X/hp871x.bas


Declare Function hp871x_dirInfo Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal info_name As String, _
    Optional ByVal info As String = "NOT FOUND", _
    Optional ByVal drive As String = "DEFAULT") As Long

Declare Function hp871x_clock Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal request As String, _
    Optional ByVal clock_data As String = "", _
    Optional ByVal cur_clock As String = "") As Long

Declare Function hp871x_progControl Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal request As String, _
    Optional ByVal command As String = "", _
    Optional ByVal prog_status As String = "") As Long

Declare Function hp871x_progVariable Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal name As String, _
    ByVal str_data As String, _
    Optional ByVal cur_str As String = "", _
    Optional ByVal number_data As Double = 0, _
    Optional cur_number As Double = 0) As Long

Declare Function hp871x_progLoad Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal progfile As String) As Long

Declare Function hp871x_doCal Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal request As String, _
    abortcal As Long, _
    Optional ByVal channel As Long = 1, _
    Optional ByVal prompt As String = "") As Long

Declare Function hp871x_readID Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal cur_ID As String, _
     Optional ByVal request As String = "MODEL?", _
     Optional ID_status As Double = 0) As Long

Declare Function hp871x_saveDefine Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     ByVal define As String, _
     Optional define_status As Long = 0) As Long

 Declare Function hp871x_stringParse Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal in_out As String, _
     ByVal parsed As String, _
     not_done As Long, _
     Optional ByVal delimiter As String = ",") As Long

Declare Function hp871x_sweepStep Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1, _
     Optional step_status As Long = 0) As Long



'* End of instrument specific declarations *
'*---------------------------------------------------------------------------*

